added new header styles to all pages

--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -8,14 +8,14 @@
     <script type="module" src="../src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header>
+     <header class="header-styles-other-pages">
       <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-auto md:w-20 md:h-auto"
+          class="logo logo-no-margin w-16"
           src="../images/Logo.png"
           alt="Art logo"
         />
-        <button id="hamburger-btn">
+        <button id="hamburger-btn" class="hamburger">
           <img
             id="hamburger-icon"
             class="w-16 h-16 md:w-20 md:h-20"
@@ -24,7 +24,7 @@
           />
         </button>
         <nav class="nav nav-styles">
-          <ul id="nav-menu" class="hidden">
+          <ul id="nav-menu" class="nav-menu">
             <li class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/">
                 <img
