fixed button styles

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -147,7 +147,7 @@
           </div>
           <div id="mediaInputs"></div>
           <div class="flex-row-center">
-            <button class="button-styles" id="Add-image-button-edit">
+            <button class="button-styles mt-2" id="Add-image-button-edit">
               Add more images
             </button>
           </div>
@@ -162,8 +162,8 @@
             />
           </div>
           <div class="button-container flex-row-center gap-4">
-            <button class="button-styles" id="save-listing-btn">Save</button>
-            <button class="button-styles" id="cancel-btn">Cancel</button>
+            <button class="button-styles mt-2" id="save-listing-btn">Save</button>
+            <button class="button-styles mt-2" id="cancel-btn">Cancel</button>
           </div>
         </form>
       </div>
