--- a/listing/index.html
+++ b/listing/index.html
@@ -120,7 +120,7 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="mt-[150px]" id="all-auction-listings"></div>
+      <div class="mt-[100px] md:mt-[150px] lg:mt-[150px]" id="all-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
