fixed issue with update profile form so that it opens on small screens

--- a/profile/index.html
+++ b/profile/index.html
@@ -134,7 +134,7 @@
           Update Profile
         </button>
       </div>
-      <div class="hidden relative flex-row-center" id="update-profile-form-box">
+      <div class=" relative flex-row-center" id="update-profile-form-box">
         <form
           class="hidden update-profile-form form-padding"
           name="update-profile"
