fixed prettier errors

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="../../src/app.js"></script>
   </head>
   <body class="body-styles">
-   <header class="header-styles-other-pages">
+    <header class="header-styles-other-pages">
       <div class="side-bar sidebar-styles">
         <img
           class="logo logo-no-margin w-16"
@@ -162,7 +162,9 @@
             />
           </div>
           <div class="button-container flex-row-center gap-4">
-            <button class="button-styles mt-2" id="save-listing-btn">Save</button>
+            <button class="button-styles mt-2" id="save-listing-btn">
+              Save
+            </button>
             <button class="button-styles mt-2" id="cancel-btn">Cancel</button>
           </div>
         </form>
