--- a/index.html
+++ b/index.html
@@ -201,15 +201,12 @@
       </div>
     </header>
     <main class="flex-1">
-
-  <div class="flex-row-center h1-home-box">
+      <div class="flex-row-center h1-home-box">
         <h1 class="h1-styles w-[180px] md:w-[300px] mt-8 md:mt-0 text-center">
           Current Auction Listings
         </h1>
       </div>
-      <div id="all-auction-listings">
-
-      </div>
+      <div id="all-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
