fixed searchicon position and size, fixed categories on small screens, fixed sidebar on small screens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-home-Desktop.png"
                   alt="home icon"
                 />
@@ -40,7 +40,7 @@
             <li id="profile-link-nav">
               <a class="nav-link link-flex" href="/profile/">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
@@ -51,7 +51,7 @@
             <li id="my-listings-link-nav" class="">
               <a class="nav-link link-flex" href="/my_listings/">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
@@ -65,7 +65,7 @@
                 href="/my_bids/"
               >
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-bids-Desktop.png"
                   alt="bids icon"
                 />
@@ -79,7 +79,7 @@
                 href="/listing/create/"
               >
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-add-desktop.png"
                   alt="add icon"
                 />
@@ -90,7 +90,7 @@
             <li class="">
               <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-register-desktop.png"
                   alt="register icon"
                 />
@@ -100,7 +100,7 @@
             <li id="sign-in-link-nav" class="">
               <a class="nav-link link-flex" href="/auth/">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/sign-in-desktop.png"
                   alt="sign in icon"
                 />
@@ -110,7 +110,7 @@
             <li id="sidebar-li" class="sidebar-li-layout">
               <button class="sign-out-btn nav-link link-flex">
                 <img
-                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
@@ -133,12 +133,12 @@
               placeholder="Search listings..."
             />
             <div
-              class="absolute w-[200px] mb-20 md:w-[480px] md:mb-8 flex flex-row"
+              class="absolute w-[180px] mb-[80px] md:w-[460px] md:mb-8 flex flex-row"
             >
               <img
                 src="./images/icons8-search-50.png"
                 alt="search icon"
-                class="search-icon w-8 h-8 absolute"
+                class="search-icon w-6 h-6 md:w-8 md:h-8 absolute"
               />
             </div>
 
