--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li id="sign-in-link-nav" class="">
+            <li id="sign-in-link-nav" class="mb-4 md:mb-0 lg:mb-0">
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
