fixed prettier build errors

--- a/auth/index.html
+++ b/auth/index.html
@@ -107,7 +107,10 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li id="sidebar-li" class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0">
+            <li
+              id="sidebar-li"
+              class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+            >
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
