--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="../../src/app.js"></script>
   </head>
   <body class="body-styles">
-   <header class="header-styles">
+    <header class="header-styles">
       <div class="side-bar sidebar-styles">
         <div class="logo-container">
           <img
@@ -107,7 +107,10 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li id="sidebar-li" class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0">
+            <li
+              id="sidebar-li"
+              class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+            >
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
