--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -108,7 +108,9 @@
               </a>
             </li>
             <li id="sidebar-li" class="sidebar-li-layout">
-              <button class="sign-out-btn nav-link link-flex mt-[-16px] mb-[10px] md:mt-0 md:mb-0 lg:mb-0 lg:mt-0">
+              <button
+                class="sign-out-btn nav-link link-flex mt-[-16px] mb-[10px] md:mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+              >
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
                   src="../images/icons8-sign-out-desktop.png"
