--- a/listing/index.html
+++ b/listing/index.html
@@ -13,7 +13,7 @@
         <div class="logo-container">
           <img
             class="logo w-16 logo-no-margin"
-            src="images/Logo.png"
+            src="../images/Logo.png"
             alt="Art logo"
           />
         </div>
@@ -21,7 +21,7 @@
           <img
             id="hamburger-icon"
             class="hamburger w-16 h-16 md:w-20 md:h-20"
-            src="images/Hamburger-icon.png"
+            src="../images/Hamburger-icon.png"
             alt="hamburger icon"
           />
         </button>
@@ -31,7 +31,7 @@
               <a class="nav-link link-flex" href="/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-home-Desktop.png"
+                  src="../images/icons8-home-Desktop.png"
                   alt="home icon"
                 />
                 <span class="span-text hidden">Home</span>
@@ -41,7 +41,7 @@
               <a class="nav-link link-flex" href="/profile/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-user-desktop.png"
+                  src="../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
                 <span class="span-text hidden">My Profile</span></a
@@ -52,7 +52,7 @@
               <a class="nav-link link-flex" href="/my_listings/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-my-listings-desktop.png"
+                  src="../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
                 <span class="span-text hidden">My Listings</span>
@@ -66,7 +66,7 @@
               >
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-bids-Desktop.png"
+                  src="../images/icons8-bids-Desktop.png"
                   alt="bids icon"
                 />
                 <span class="hidden span-text">My Bids</span>
@@ -80,7 +80,7 @@
               >
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-add-desktop.png"
+                  src="../images/icons8-add-desktop.png"
                   alt="add icon"
                 />
 
@@ -91,7 +91,7 @@
               <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-register-desktop.png"
+                  src="../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
                 <span class="hidden span-text">Register</span>
@@ -101,7 +101,7 @@
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/sign-in-desktop.png"
+                  src="../images/sign-in-desktop.png"
                   alt="sign in icon"
                 />
                 <span class="hidden span-text">Sign in</span>
@@ -114,7 +114,7 @@
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-sign-out-desktop.png"
+                  src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 <span class="hidden span-text">Sign Out</span>
@@ -139,7 +139,7 @@
               class="absolute w-[180px] mb-[80px] md:w-[460px] md:mb-8 flex flex-row"
             >
               <img
-                src="./images/icons8-search-50.png"
+                src="../images/icons8-search-50.png"
                 alt="search icon"
                 class="search-icon w-6 h-6 md:w-8 md:h-8 absolute"
               />
@@ -205,7 +205,7 @@
     </header>
     <main class="flex-1">
       <div
-        class="mt-[100px] md:mt-[150px] lg:mt-[150px]"
+        class="mt-[180px] md:mt-[150px] lg:mt-[150px]"
         id="all-auction-listings"
       ></div>
     </main>
