fixed prettier errors

--- a/listing/index.html
+++ b/listing/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="../src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header class=" border-none">
+    <header class="border-none">
       <div class="side-bar sidebar-styles">
         <div class="logo-container">
           <img
@@ -123,18 +123,9 @@
           </ul>
         </nav>
       </div>
-
-
-
-
-        </div>
-      </div>
     </header>
-    <main class="flex-1 ">
-      <div
-        class="mt-[40px]"
-        id="all-auction-listings"
-      ></div>
+    <main class="flex-1">
+      <div class="mt-[40px]" id="all-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
