fixed margin on auth page

--- a/auth/index.html
+++ b/auth/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="../src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header class=" border-none">
+    <header class="border-none">
       <div class="side-bar sidebar-styles">
         <div class="logo-container">
           <img
@@ -124,10 +124,10 @@
         </nav>
       </div>
     </header>
-    <main class="flex-1 mt-[40px]">
+    <main class="flex-1 mt-[10px]">
       <div class="auth-main">
         <div class="flex-row-center">
-          <h1 class="h1-styles w-[40%] md:w-[400px] mt-2 mb-4 text-center">
+          <h1 class="h1-styles w-[40%] md:w-[400px] mb-4 text-center">
             Sign in or Register an Account
           </h1>
         </div>
