fixed search and select in header on mobile

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <img
                 src="./images/icons8-search-50.png"
                 alt="search icon"
-                class="search-icon w-6 h-6 md:w-8 md:h-8 absolute"
+                class="search-icon ml-8 w-6 h-6 md:w-8 md:h-8 absolute"
               />
             </div>
 
