--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
               placeholder="Search listings..."
             />
             <div
-              class="absolute w-[180px] mb-[80px] md:w-[460px] md:mb-8 flex flex-row"
+              class="absolute w-[180px] mb-[25px] md:w-[460px] md:mb-8 flex flex-row"
             >
               <img
                 src="./images/icons8-search-50.png"
                 alt="search icon"
-                class="search-icon ml-8 w-6 h-6 md:w-8 md:h-8 absolute"
+                class="search-icon "
               />
             </div>
 
@@ -200,7 +200,7 @@
         </div>
       </div>
     </header>
-    <main class="flex-1">
+    <main class="flex-1 mt-[160px]">
       <div class="flex-row-center h1-home-box">
         <h1 class="h1-styles w-[180px] md:w-[300px] mt-8 md:mt-0 text-center">
           Current Auction Listings
