adjusted button size

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="search-button-box">
               <button
                 id="search-button"
-                class="button-styles md:pl-8 md:pr-8 pl-3 pr-3"
+                class="button-styles pl-3 pr-3 md:pl-8 md:pr-8 "
               >
                 Search
               </button>
