trying to fix image container issue on home page

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
       </div>
     </header>
-    <main class="flex-1 mt-[160px]">
+    <main class="flex-1">
       <div class="flex-row-center h1-home-box">
         <h1 class="h1-styles w-[180px] md:w-[300px] mt-8 md:mt-0 text-center">
           Current Auction Listings
