--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -109,7 +109,7 @@
             </li>
             <li
               id="sidebar-li"
-              class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+              class="sidebar-li-layout mt-[-16px] mb-[10px] md:mt-0 md:mb-0 lg:mb-0 lg:mt-0 xl:mb-0 xl:mt-0"
             >
               <button class="sign-out-btn nav-link link-flex">
                 <img
@@ -125,9 +125,9 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="mt-[40px] edit-form-container flex-row-center">
+      <div class="mt-[200px] md:mt-[40px] lg:mt-[40px] xl:mt-[40px] h-auto edit-form-container flex-row-center">
         <form
-          class="form-styles form-padding w-[18rem]"
+          class="form-styles form-padding w-[250px] h-auto md:w-[400px] lg:w-[600px] xl:w-[800px]"
           name="edit"
           id="edit-form"
         >
@@ -138,6 +138,7 @@
           </div>
 
           <div class="flex flex-col">
+
             <label class="gold-labels" for="description">Description</label>
             <textarea
               class="text-area-styles"
@@ -151,17 +152,21 @@
             <input class="input-styles" id="tags" type="text" name="tags" />
           </div>
 
-          <div class="flex-row-center h-auto">
+           <div id="url-container" class="flex flex-col">
+
+
+
+
+          </div>
             <button class="button-styles mt-2" id="Add-image-button-edit">
               Add more images
             </button>
-          </div>
-          <div id="mediaInputs" class="h-auto"></div>
 
-          <div class="flex flex-col">
+
+          <div class="flex flex-col w-[200px] md:w-[300px] lg:w-[600px] xl:w-[800px]">
             <label class="gold-labels" for="endsAt">Ends at</label>
             <input
-              class="input-styles"
+              class="input-styles w-[100%]"
               id="endsAt"
               type="datetime-local"
               name="endsAt"
@@ -173,7 +178,13 @@
             </button>
             <button class="button-styles mt-2" id="cancel-btn">Cancel</button>
           </div>
+          </div>
+
+
+
+
         </form>
+        </div>
       </div>
     </main>
     <footer class="footer">
