--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -109,7 +109,7 @@
             </li>
             <li id="sidebar-li" class="sidebar-li-layout">
               <button
-                class="sign-out-btn nav-link link-flex mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+                class="sign-out-btn nav-link link-flex mt-[-16px] mb-[10px] md:mt-0 md:mb-0 lg:mb-0 lg:mt-0 xl:mb-0 xl:mt-0"
               >
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
