--- a/profile/index.html
+++ b/profile/index.html
@@ -109,7 +109,7 @@
             </li>
             <li
               id="sidebar-li"
-              class="sidebar-li-layout mt-[-16px] mb-[10px] mt-0 md:mb-0 lg:mb-0 lg:mt-0"
+              class="sidebar-li-layout mt-[-16px] mb-[10px] md:mt-0 md:mb-0 lg:mb-0 lg:mt-0 xl:mb-0 xl:mt-0"
             >
               <button class="sign-out-btn nav-link link-flex">
                 <img
