--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -125,7 +125,9 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="mt-[200px] md:mt-[40px] lg:mt-[40px] xl:mt-[40px] h-auto edit-form-container flex-row-center">
+      <div
+        class="mt-[200px] md:mt-[40px] lg:mt-[40px] xl:mt-[40px] h-auto edit-form-container flex-row-center"
+      >
         <form
           class="form-styles form-padding w-[250px] h-auto md:w-[400px] lg:w-[600px] xl:w-[800px]"
           name="edit"
@@ -138,7 +140,6 @@
           </div>
 
           <div class="flex flex-col">
-
             <label class="gold-labels" for="description">Description</label>
             <textarea
               class="text-area-styles"
@@ -152,18 +153,14 @@
             <input class="input-styles" id="tags" type="text" name="tags" />
           </div>
 
-           <div id="url-container" class="flex flex-col">
+          <div id="url-container" class="flex flex-col"></div>
+          <button class="button-styles mt-2" id="Add-image-button-edit">
+            Add more images
+          </button>
 
-
-
-
-          </div>
-            <button class="button-styles mt-2" id="Add-image-button-edit">
-              Add more images
-            </button>
-
-
-          <div class="flex flex-col w-[200px] md:w-[300px] lg:w-[600px] xl:w-[800px]">
+          <div
+            class="flex flex-col w-[200px] md:w-[300px] lg:w-[600px] xl:w-[800px]"
+          >
             <label class="gold-labels" for="endsAt">Ends at</label>
             <input
               class="input-styles w-[100%]"
@@ -178,13 +175,7 @@
             </button>
             <button class="button-styles mt-2" id="cancel-btn">Cancel</button>
           </div>
-          </div>
-
-
-
-
         </form>
-        </div>
       </div>
     </main>
     <footer class="footer">
