fixed input styles edit form

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -139,10 +139,12 @@
             <input class="input-styles" id="title" type="text" name="title" />
           </div>
 
-          <div class="flex flex-col">
+          <div
+            class="flex flex-col w-[200px] md:w-[300px] lg:w-[400px] xl:w-[800px]"
+          >
             <label class="gold-labels" for="description">Description</label>
             <textarea
-              class="text-area-styles"
+              class="input-styles w-[200px] h-[100px] md:w-[300px] lg:w-[400px] xl:w-[600px]"
               id="description"
               name="description"
             ></textarea>
@@ -158,9 +160,7 @@
             Add more images
           </button>
 
-          <div
-            class="flex flex-col w-[200px] md:w-[300px] lg:w-[600px] xl:w-[800px]"
-          >
+          <div class="flex flex-col w-[200px]">
             <label class="gold-labels" for="endsAt">Ends at</label>
             <input
               class="input-styles w-[100%]"
