added width to url container

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -155,7 +155,10 @@
             <input class="input-styles" id="tags" type="text" name="tags" />
           </div>
 
-          <div id="url-container" class="flex flex-col"></div>
+          <div
+            id="url-container"
+            class="flex flex-col w-[200px] md:w-[300px] lg:w-[400px] xl:w-[500px]"
+          ></div>
           <button class="button-styles mt-2" id="Add-image-button-edit">
             Add more images
           </button>
