fixed edit form

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -126,10 +126,10 @@
     </header>
     <main class="flex-1">
       <div
-        class="mt-[200px] md:mt-[40px] lg:mt-[40px] xl:mt-[40px] h-auto edit-form-container flex-row-center"
+        class="pl-[20px] pr-[20px] mt-[200px] md:mt-[40px] lg:mt-[40px] xl:mt-[40px] h-auto edit-form-container flex-row-center"
       >
         <form
-          class="form-styles form-padding w-[250px] h-auto md:w-[400px] lg:w-[600px] xl:w-[800px]"
+          class="form-styles flex flex-col form-padding w-[100%] h-auto md:w-[400px] lg:w-[600px] xl:w-[800px]"
           name="edit"
           id="edit-form"
         >
@@ -155,10 +155,7 @@
             <input class="input-styles" id="tags" type="text" name="tags" />
           </div>
 
-          <div
-            id="url-container"
-            class="flex flex-col w-[200px] md:w-[300px] lg:w-[400px] xl:w-[500px]"
-          ></div>
+          <div id="url-container" class="flex flex-col w-[100%]"></div>
           <button class="button-styles mt-2" id="Add-image-button-edit">
             Add more images
           </button>
