fixed create form, fixed icon link, fixed delete listing function

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -133,7 +133,9 @@
           name="edit"
           id="edit-form"
         >
-          <h1 class="h1-styles mb-4 form-title-styles items-center w-[100%]">Edit Listing</h1>
+          <h1 class="h1-styles mb-4 form-title-styles items-center w-[100%]">
+            Edit Listing
+          </h1>
           <div class="flex flex-col">
             <label class="gold-labels" for="title">Title</label>
             <input class="input-styles" id="title" type="text" name="title" />
