--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -129,7 +129,7 @@
         class="mt-[40px] create-form-container flex-row-center w-[100%] h-[100%]"
       >
         <form
-          class="form-styles form-padding-create  h-[auto] "
+          class="form-styles form-padding-create h-[auto]"
           name="create-listing"
           id="create-form"
         >
@@ -147,7 +147,9 @@
           </div>
 
           <div class="flex flex-col items-start">
-            <label class="gold-labels  mt-2 mb-2" for="description">Description</label>
+            <label class="gold-labels mt-2 mb-2" for="description"
+              >Description</label
+            >
             <textarea
               class="text-area-styles"
               id="description"
@@ -157,7 +159,7 @@
           </div>
 
           <div class="flex flex-col items-start">
-            <label class="gold-labels  mt-2 mb-2" for="tags">Tags</label>
+            <label class="gold-labels mt-2 mb-2" for="tags">Tags</label>
             <input
               class="input-styles md:w-[201px]"
               id="tags"
@@ -168,25 +170,24 @@
 
           <div id="url-container" class="flex flex-col w-full items-start">
             <div class="flex flex-col items-start w-full">
-
-            <label class="gold-labels mt-2 mb-2" for="urls">Image Url</label>
-            <input
-              class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
-              type="url"
-              name="urls"
-              id="urls"
-              placeholder="Image url"
-            />
-</div>
-<div class="flex flex-col items-start w-full">
-            <label class="gold-labels mt-2 mb-2" for="alts">Image Alt</label>
-            <input
-              class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
-              id="alts"
-              type="text"
-              name="alts"
-              placeholder="Alt text"
-            />
+              <label class="gold-labels mt-2 mb-2" for="urls">Image Url</label>
+              <input
+                class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
+                type="url"
+                name="urls"
+                id="urls"
+                placeholder="Image url"
+              />
+            </div>
+            <div class="flex flex-col items-start w-full">
+              <label class="gold-labels mt-2 mb-2" for="alts">Image Alt</label>
+              <input
+                class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
+                id="alts"
+                type="text"
+                name="alts"
+                placeholder="Alt text"
+              />
             </div>
           </div>
           <div class="flex flex-col items-start">
