--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -91,7 +91,7 @@
               <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
                 <img
                   class="w-[32px] h-[32px] md:w-[50px] md:h-[50px]"
-                  src="images/icons8-register-desktop.png"
+                  src="../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
                 <span class="hidden span-text">Register</span>
