--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -136,25 +136,33 @@
           <h1 class="h1-styles mb-4 form-title-styles items-center w-[100%]">
             Edit Listing
           </h1>
-          <div class="flex flex-col">
+          <div class="flex flex-col items-start w-full">
             <label class="gold-labels" for="title">Title</label>
-            <input class="input-styles" id="title" type="text" name="title" />
+            <input
+              class="input-styles w-full"
+              id="title"
+              type="text"
+              name="title"
+            />
           </div>
 
-          <div
-            class="flex flex-col w-[200px] md:w-[300px] lg:w-[400px] xl:w-[800px]"
-          >
+          <div class="flex flex-col items-start w-full">
             <label class="gold-labels" for="description">Description</label>
             <textarea
-              class="input-styles w-[200px] h-[100px] md:w-[300px] lg:w-[400px] xl:w-[600px]"
+              class="input-styles w-full"
               id="description"
               name="description"
             ></textarea>
           </div>
 
-          <div class="flex flex-col">
+          <div class="flex flex-col items-start w-full">
             <label class="gold-labels" for="tags">Tags</label>
-            <input class="input-styles" id="tags" type="text" name="tags" />
+            <input
+              class="input-styles w-full"
+              id="tags"
+              type="text"
+              name="tags"
+            />
           </div>
 
           <div id="url-container" class="flex flex-col w-[100%]"></div>
@@ -162,16 +170,18 @@
             Add more images
           </button>
 
-          <div class="flex flex-col w-[200px]">
+          <div class="flex flex-col w-full">
             <label class="gold-labels" for="endsAt">Ends at</label>
             <input
-              class="input-styles w-[100%]"
+              class="input-styles w-full"
               id="endsAt"
               type="datetime-local"
               name="endsAt"
             />
           </div>
-          <div class="button-container flex-row-center gap-4">
+          <div
+            class="button-container justify-center flex flex-row flex-wrap w-full gap-4"
+          >
             <button class="button-styles mt-2" id="save-listing-btn">
               Save
             </button>
