fixed create a listing form

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -138,7 +138,7 @@
           <div class="flex flex-col items-start w-full">
             <label class="gold-labels mb-2" for="title">Title</label>
             <input
-              class="input-styles md:w-[201px]"
+              class="input-styles w-full"
               id="title"
               type="text"
               name="title"
@@ -151,7 +151,7 @@
               >Description</label
             >
             <textarea
-              class="text-area-styles"
+              class="text-area-styles w-full"
               id="description"
               name="description"
               maxlength="300"
@@ -161,7 +161,7 @@
           <div class="flex flex-col items-start w-full">
             <label class="gold-labels mt-2 mb-2" for="tags">Tags</label>
             <input
-              class="input-styles md:w-[201px]"
+              class="input-styles w-full"
               id="tags"
               type="text"
               name="tags"
@@ -175,7 +175,7 @@
             <div class="flex flex-col items-start w-full">
               <label class="gold-labels mt-2 mb-2" for="urls">Image Url</label>
               <input
-                class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
+                class="input-styles w-full"
                 type="url"
                 name="urls"
                 id="urls"
@@ -185,7 +185,7 @@
             <div class="flex flex-col items-start w-full">
               <label class="gold-labels mt-2 mb-2" for="alts">Image Alt</label>
               <input
-                class="input-styles w-full md:w-[300px] lg:w-[400px] xl:w-[500px]"
+                class="input-styles w-full"
                 id="alts"
                 type="text"
                 name="alts"
