--- a/auth/index.html
+++ b/auth/index.html
@@ -198,16 +198,16 @@
           <div id="error-message-sign-in-form"></div>
         </div>
 
-        <div class="hidden relative" id="register-form">
+        <div class="hidden relative w-full pl-[10px] pr-[10px]" id="register-form">
           <form
             id="reg-form"
             method="post"
-            class="form-styles form-padding w-[250px] md:w-[20rem] lg:w-[20rem] xl:w-[25rem]"
+            class="form-styles form-padding w-full "
             name="register"
           >
             <div class="flex flex-row relative"></div>
-            <h1 class="h1-styles form-title-styles mb-4">Register</h1>
-            <div class="flex flex-col">
+            <h1 class="h1-styles form-title-styles mb-4 w-full">Register</h1>
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="name">Name</label>
               <input
                 class="input-styles"
@@ -219,7 +219,7 @@
               />
             </div>
 
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="emailReg">Email</label>
               <input
                 class="input-styles"
@@ -231,7 +231,7 @@
               />
             </div>
 
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="passwordReg">Password</label>
               <input
                 class="input-styles"
@@ -242,7 +242,7 @@
                 required
               />
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col items-start w-full">
               <label class="gold-labels" for="bio">Bio</label>
               <textarea
                 class="text-area-styles"
@@ -252,7 +252,7 @@
               >
               </textarea>
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="avatarUrl">Avatar url</label>
               <input
                 class="input-styles"
@@ -263,7 +263,7 @@
               />
             </div>
 
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="avatarAlt">Avatar alt</label>
               <input
                 class="input-styles"
@@ -273,7 +273,7 @@
                 maxlength="120"
               />
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="bannerUrl">Banner url</label>
               <input
                 class="input-styles"
@@ -283,7 +283,7 @@
                 pattern="https?://.+"
               />
             </div>
-            <div class="flex flex-col">
+            <div class="flex flex-col w-full">
               <label class="gold-labels" for="bannerAlt">Banner alt</label>
               <input
                 class="input-styles"
