fixed login form

--- a/auth/index.html
+++ b/auth/index.html
@@ -143,24 +143,24 @@
           </button>
         </div>
 
-        <div class="hidden relative" id="sign-in-form">
+        <div class="hidden relative w-full pl-[10px] pr-[10px]" id="sign-in-form">
           <form
-            class="sign-in-form sign-in form-padding form-styles w-[220px] md:w-[20rem] lg:w-[20rem] xl:w-[25rem]"
+            class="sign-in-form sign-in form-padding form-styles w-full"
             name="sign-in"
           >
-            <h1 class="h1-styles mb-4 form-title-styles">Sign in</h1>
-            <div class="flex flex-row">
-              <div class="mt-3 relative w-[40px]">
+            <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
+            <div class="flex flex-row w-full relative">
+              <div class="mt-3 relative ">
                 <img
-                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px] mt-2"
+                  class="w-[36px] h-[32px] md:w-[40px] md:h-[40px] mt-[4px] "
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
               </div>
-              <div class="flex flex-col">
+              <div class="flex flex-col w-full">
                 <label class="gold-labels" for="email">Email</label>
                 <input
-                  class="input-styles w-[120px] md:w-[200px]"
+                  class="input-styles w-full"
                   id="email"
                   type="email"
                   name="email"
@@ -169,7 +169,7 @@
               </div>
             </div>
 
-            <div class="flex flex-row">
+            <div class="flex flex-row w-full">
               <div class="mt-4 w-[30px] relative">
                 <img
                   class="w-[30px] h-[30px] md:w-[40px] md:h-[40px]"
@@ -178,10 +178,10 @@
                 />
               </div>
 
-              <div class="flex flex-col">
+              <div class="flex flex-col w-full">
                 <label class="gold-labels" for="password">Password</label>
                 <input
-                  class="input-styles w-[120px] md:w-[200px]"
+                  class="input-styles w-full"
                   type="password"
                   name="password"
                   id="password"
