--- a/auth/index.html
+++ b/auth/index.html
@@ -148,11 +148,11 @@
             class="sign-in-form sign-in form-padding form-styles w-[220px] md:w-[20rem] lg:w-[20rem] xl:w-[25rem]"
             name="sign-in"
           >
-            <h1 class="h1-styles mb-4 form-title-styles">Sign in</h1>
-            <div class="flex flex-row">
-              <div class="mt-3 relative w-[40px]">
+            <h1 class="h1-styles mb-4 form-title-styles w-full">Sign in</h1>
+            <div class="flex flex-row  ">
+              <div class=" relative mt-4 ">
                 <img
-                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px] mt-2"
+                  class="w-[32px] h-[32px] md:w-[40px] md:h-[40px]"
                   src="/images/icons8-username-64.png"
                   alt="username icon"
                 />
@@ -170,9 +170,9 @@
             </div>
 
             <div class="flex flex-row">
-              <div class="mt-4 w-[30px] relative">
+              <div class="mt-4 md:mt-[12px] w-[30px] relative">
                 <img
-                  class="w-[30px] h-[30px] md:w-[40px] md:h-[40px]"
+                  class="w-[32px] h-[30px]  md:w-[42px] md:h-[36px] lg:w-[42px] lg:h-[36px] xl:w-[42px] xl:h-[36px]"
                   src="/images/icons8-password-50.png"
                   alt="password icon"
                 />
