updated update profile and create a listing forms

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -133,7 +133,9 @@
           name="create-listing"
           id="create-form"
         >
-          <h1 class="h1-styles form-title-styles mb-4">Create a Listing</h1>
+          <h1 class="h1-styles form-title-styles mb-4 w-full">
+            Create a Listing
+          </h1>
 
           <div class="flex flex-col items-start w-full">
             <label class="gold-labels mb-2" for="title">Title</label>
