--- a/profile/index.html
+++ b/profile/index.html
@@ -147,7 +147,7 @@
           class="hidden update-profile-form form-padding"
           name="update-profile"
         >
-          <h2 class="h2-styles form-title-styles">Update Profile</h2>
+          <h2 class="h2-styles form-title-styles w-full">Update Profile</h2>
 
           <div class="mt-4 flex flex-col">
             <label class="gold-labels" for="bio">Bio</label>
